@@ -8,9 +8,9 @@ import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.kwakmunsu.randsome.admin.candidate.repository.dto.CandidateListResponse;
+import org.kwakmunsu.randsome.admin.PageRequest;
+import org.kwakmunsu.randsome.admin.PageResponse;
 import org.kwakmunsu.randsome.admin.candidate.repository.dto.CandidatePreviewResponse;
-import org.kwakmunsu.randsome.admin.candidate.serivce.dto.CandidateListReadServiceRequest;
 import org.kwakmunsu.randsome.domain.candidate.entity.Candidate;
 import org.kwakmunsu.randsome.domain.candidate.enums.CandidateStatus;
 import org.kwakmunsu.randsome.domain.candidate.service.CandidateRepository;
@@ -30,9 +30,6 @@ class CandidateAdminServiceIntegrationTest {
     private CandidateAdminService candidateAdminService;
 
     @Autowired
-    private CandidateAdminRepository candidateAdminRepository;
-
-    @Autowired
     private CandidateRepository candidateRepository;
 
     @Autowired
@@ -40,7 +37,7 @@ class CandidateAdminServiceIntegrationTest {
 
     private static final int CANDIDATES_PER_STATUS = 25;
     private static final int TOTAL_CANDIDATE_COUNT = CANDIDATES_PER_STATUS * 3; // 75개
-    private static final int DEFAULT_PAGE_SIZE = 20;
+    private static final int DEFAULT_PAGE_SIZE = 10;
 
     @BeforeEach
     void setUp() {
@@ -51,37 +48,35 @@ class CandidateAdminServiceIntegrationTest {
     @Test
     void getPendingCandidatesFirstPage() {
         // given
-        var request = new CandidateListReadServiceRequest(CandidateStatus.PENDING, 1);
+        var pageRequest = new PageRequest(1);
 
         // when
-        CandidateListResponse response = candidateAdminService.getCandidates(request);
+        PageResponse<CandidatePreviewResponse> response = candidateAdminService.getCandidates(CandidateStatus.PENDING, pageRequest);
 
         // then
-        assertThat(response.responses().size()).isEqualTo(DEFAULT_PAGE_SIZE); // 20개
-        assertThat(response.hasNext()).isTrue(); // 다음 페이지 존재
-        assertThat(response.totalCount()).isEqualTo(CANDIDATES_PER_STATUS); // 총 25개
+        assertThat(response.content().size()).isEqualTo(DEFAULT_PAGE_SIZE);
+        assertThat(response.count()).isEqualTo(CANDIDATES_PER_STATUS);
 
         // 모든 응답이 대기 상태인지 확인
-        response.responses().forEach(candidate ->
+        response.content().forEach(candidate ->
                 assertThat(candidate.status()).isEqualTo(CandidateStatus.PENDING.getDescription()));
     }
 
-    @DisplayName("관리자가 대기 상태 후보자 목록 두번째 페이지를 조회한다.")
+    @DisplayName("관리자가 대기 상태 후보자 목록 세번째 페이지를 조회한다.")
     @Test
     void getPendingCandidatesSecondPage() {
         // given
-        var request = new CandidateListReadServiceRequest(CandidateStatus.PENDING, 2);
+        var pageRequest = new PageRequest(3);
 
         // when
-        CandidateListResponse response = candidateAdminService.getCandidates(request);
+        PageResponse<CandidatePreviewResponse> response = candidateAdminService.getCandidates(CandidateStatus.PENDING, pageRequest);
 
         // then
-        assertThat(response.responses().size()).isEqualTo(5); // 25 - 20 = 5개
-        assertThat(response.hasNext()).isFalse(); // 마지막 페이지
-        assertThat(response.totalCount()).isEqualTo(CANDIDATES_PER_STATUS); // 총 25개
+        assertThat(response.content().size()).isEqualTo(5);
+        assertThat(response.count()).isEqualTo(CANDIDATES_PER_STATUS);
 
         // 모든 응답이 대기 상태인지 확인
-        response.responses().forEach(candidate ->
+        response.content().forEach(candidate ->
                 assertThat(candidate.status()).isEqualTo(CandidateStatus.PENDING.getDescription()));
     }
 
@@ -89,18 +84,17 @@ class CandidateAdminServiceIntegrationTest {
     @Test
     void getApprovedCandidatesFirstPage() {
         // given
-        var request = new CandidateListReadServiceRequest(CandidateStatus.APPROVED, 1);
+        var pageRequest = new PageRequest(1);
 
         // when
-        CandidateListResponse response = candidateAdminService.getCandidates(request);
+        PageResponse<CandidatePreviewResponse> response = candidateAdminService.getCandidates(CandidateStatus.APPROVED, pageRequest);
 
         // then
-        assertThat(response.responses().size()).isEqualTo(DEFAULT_PAGE_SIZE);
-        assertThat(response.hasNext()).isTrue();
-        assertThat(response.totalCount()).isEqualTo(CANDIDATES_PER_STATUS);
+        assertThat(response.content().size()).isEqualTo(DEFAULT_PAGE_SIZE);
+        assertThat(response.count()).isEqualTo(CANDIDATES_PER_STATUS);
 
         // 모든 응답이 승인 상태인지 확인
-        response.responses().forEach(candidate ->
+        response.content().forEach(candidate ->
                 assertThat(candidate.status()).isEqualTo(CandidateStatus.APPROVED.getDescription()));
     }
 
@@ -108,18 +102,17 @@ class CandidateAdminServiceIntegrationTest {
     @Test
     void getApprovedCandidatesSecondPage() {
         // given
-        var request = new CandidateListReadServiceRequest(CandidateStatus.APPROVED, 2);
+        var pageRequest = new PageRequest(3);
 
         // when
-        CandidateListResponse response = candidateAdminService.getCandidates(request);
+        PageResponse<CandidatePreviewResponse> response = candidateAdminService.getCandidates(CandidateStatus.APPROVED, pageRequest);
 
         // then
-        assertThat(response.responses().size()).isEqualTo(5);
-        assertThat(response.hasNext()).isFalse();
-        assertThat(response.totalCount()).isEqualTo(CANDIDATES_PER_STATUS);
+        assertThat(response.content().size()).isEqualTo(5);
+        assertThat(response.count()).isEqualTo(CANDIDATES_PER_STATUS);
 
         // 모든 응답이 승인 상태인지 확인
-        response.responses().forEach(candidate ->
+        response.content().forEach(candidate ->
                 assertThat(candidate.status()).isEqualTo(CandidateStatus.APPROVED.getDescription()));
     }
 
@@ -127,37 +120,35 @@ class CandidateAdminServiceIntegrationTest {
     @Test
     void getRejectedCandidates() {
         // given
-        var request = new CandidateListReadServiceRequest(CandidateStatus.REJECTED, 1);
+        var pageRequest = new PageRequest(1);
 
         // when
-        CandidateListResponse response = candidateAdminService.getCandidates(request);
+        PageResponse<CandidatePreviewResponse> response = candidateAdminService.getCandidates(CandidateStatus.REJECTED, pageRequest);
 
         // then
-        assertThat(response.responses().size()).isEqualTo(DEFAULT_PAGE_SIZE);
-        assertThat(response.hasNext()).isTrue();
-        assertThat(response.totalCount()).isEqualTo(CANDIDATES_PER_STATUS);
+        assertThat(response.content().size()).isEqualTo(DEFAULT_PAGE_SIZE);
+        assertThat(response.count()).isEqualTo(CANDIDATES_PER_STATUS);
 
         // 모든 응답이 거절 상태인지 확인
-        response.responses().forEach(candidate ->
+        response.content().forEach(candidate ->
                 assertThat(candidate.status()).isEqualTo(CandidateStatus.REJECTED.getDescription()));
     }
 
-    @DisplayName("관리자가 거절 상태 후보자 목록 두번째 페이지를 조회한다.")
+    @DisplayName("관리자가 거절 상태 후보자 목록 세번째 페이지를 조회한다.")
     @Test
     void getRejectedCandidatesSecondPage() {
         // given
-        var request = new CandidateListReadServiceRequest(CandidateStatus.REJECTED, 2);
+        var pageRequest = new PageRequest(3);
 
         // when
-        CandidateListResponse response = candidateAdminService.getCandidates(request);
+        PageResponse<CandidatePreviewResponse> response = candidateAdminService.getCandidates(CandidateStatus.REJECTED, pageRequest);
 
         // then
-        assertThat(response.responses().size()).isEqualTo(5);
-        assertThat(response.hasNext()).isFalse();
-        assertThat(response.totalCount()).isEqualTo(CANDIDATES_PER_STATUS);
+        assertThat(response.content().size()).isEqualTo(5);
+        assertThat(response.count()).isEqualTo(CANDIDATES_PER_STATUS);
 
         // 모든 응답이 거절 상태인지 확인
-        response.responses().forEach(candidate ->
+        response.content().forEach(candidate ->
                 assertThat(candidate.status()).isEqualTo(CandidateStatus.REJECTED.getDescription()));
     }
 
@@ -165,43 +156,37 @@ class CandidateAdminServiceIntegrationTest {
     @Test
     void verifyStatusDistribution() {
         // given & when
-        var pendingRequest = new CandidateListReadServiceRequest(CandidateStatus.PENDING, 1);
-        var approvedRequest = new CandidateListReadServiceRequest(CandidateStatus.APPROVED, 1);
-        var rejectedRequest = new CandidateListReadServiceRequest(CandidateStatus.REJECTED, 1);
+        var pageRequest = new PageRequest(1);
 
-        var pendingResponse = candidateAdminService.getCandidates(pendingRequest);
-        var approvedResponse = candidateAdminService.getCandidates(approvedRequest);
-        var rejectedResponse = candidateAdminService.getCandidates(rejectedRequest);
+        var pendingResponse = candidateAdminService.getCandidates(CandidateStatus.PENDING, pageRequest);
+        var approvedResponse = candidateAdminService.getCandidates(CandidateStatus.APPROVED, pageRequest);
+        var rejectedResponse = candidateAdminService.getCandidates(CandidateStatus.REJECTED, pageRequest);
 
         // then
-        assertThat(pendingResponse.totalCount()).isEqualTo(CANDIDATES_PER_STATUS);
-        assertThat(approvedResponse.totalCount()).isEqualTo(CANDIDATES_PER_STATUS);
-        assertThat(rejectedResponse.totalCount()).isEqualTo(CANDIDATES_PER_STATUS);
+        assertThat(pendingResponse.count()).isEqualTo(CANDIDATES_PER_STATUS);
+        assertThat(approvedResponse.count()).isEqualTo(CANDIDATES_PER_STATUS);
+        assertThat(rejectedResponse.count()).isEqualTo(CANDIDATES_PER_STATUS);
 
         // 전체 합계 확인
-        long totalCount = pendingResponse.totalCount() +
-                approvedResponse.totalCount() +
-                rejectedResponse.totalCount();
+        long totalCount = pendingResponse.count() +
+                approvedResponse.count() +
+                rejectedResponse.count();
         assertThat(totalCount).isEqualTo(TOTAL_CANDIDATE_COUNT);
     }
 
     @DisplayName("대기 상태 후보자의 첫 번째와 두 번째 페이지가 겹치지 않는다.")
     @Test
     void pendingCandidatesPagesDoNotOverlap() {
-        // given
-        var firstPageRequest = new CandidateListReadServiceRequest(CandidateStatus.PENDING, 1);
-        var secondPageRequest = new CandidateListReadServiceRequest(CandidateStatus.PENDING, 2);
-
         // when
-        var firstPageResponse = candidateAdminService.getCandidates(firstPageRequest);
-        var secondPageResponse = candidateAdminService.getCandidates(secondPageRequest);
+        var firstPageResponse = candidateAdminService.getCandidates(CandidateStatus.PENDING, new PageRequest(1));
+        var secondPageResponse = candidateAdminService.getCandidates(CandidateStatus.PENDING, new PageRequest(2));
 
         // then
-        var firstPageIds = firstPageResponse.responses().stream()
+        var firstPageIds = firstPageResponse.content().stream()
                 .map(CandidatePreviewResponse::memberId)
                 .collect(Collectors.toSet());
 
-        var secondPageIds = secondPageResponse.responses().stream()
+        var secondPageIds = secondPageResponse.content().stream()
                 .map(CandidatePreviewResponse::memberId)
                 .collect(Collectors.toSet());
 
@@ -209,29 +194,25 @@ class CandidateAdminServiceIntegrationTest {
         assertThat(Collections.disjoint(firstPageIds, secondPageIds)).isTrue();
 
         // 전체 개수 확인
-        assertThat(firstPageIds.size() + secondPageIds.size())
-                .isEqualTo(CANDIDATES_PER_STATUS);
+        assertThat(firstPageIds.size() + secondPageIds.size()).isEqualTo(20); // 첫 번째 페이지 10개 + 두 번째 페이지 10개 = 20개
     }
 
     @DisplayName("최신순 정렬이 페이지 간에도 유지된다.")
     @Test
     void orderingMaintainedAcrossPages() {
-        // given
-        var firstPageRequest = new CandidateListReadServiceRequest(CandidateStatus.PENDING, 1);
-        var secondPageRequest = new CandidateListReadServiceRequest(CandidateStatus.PENDING, 2);
 
         // when
-        var firstPageResponse = candidateAdminService.getCandidates(firstPageRequest);
-        var secondPageResponse = candidateAdminService.getCandidates(secondPageRequest);
+        var firstPageResponse = candidateAdminService.getCandidates(CandidateStatus.PENDING, new PageRequest(1));
+        var secondPageResponse = candidateAdminService.getCandidates(CandidateStatus.PENDING, new PageRequest(2));
 
         // then
-        var firstPageCandidates = firstPageResponse.responses();
-        var secondPageCandidates = secondPageResponse.responses();
+        var firstPageCandidates = firstPageResponse.content();
+        var secondPageCandidates = secondPageResponse.content();
 
         // 첫 번째 페이지의 마지막 항목이 두 번째 페이지의 첫 번째 항목보다 최신이어야 함
         if (!firstPageCandidates.isEmpty() && !secondPageCandidates.isEmpty()) {
-            LocalDateTime lastOfFirstPage = firstPageCandidates.get(firstPageCandidates.size() - 1).appliedAt();
-            LocalDateTime firstOfSecondPage = secondPageCandidates.get(0).appliedAt();
+            LocalDateTime lastOfFirstPage = firstPageCandidates.getLast().appliedAt();
+            LocalDateTime firstOfSecondPage = secondPageCandidates.getFirst().appliedAt();
 
             assertThat(lastOfFirstPage).isAfterOrEqualTo(firstOfSecondPage);
         }
